# monitor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
monitor/: __init__.py  api.py  builtin_collectors.py  collectors.py  config.py  data.py  example_inventory.json  example_inventory.toml  inventory.toml  main.py  models.py  monitor.py  utils.py
